fix header overflow on mobile

--- a/portfolio/static/portfolio/css/_header.sass
+++ b/portfolio/static/portfolio/css/_header.sass
@@ -30,6 +30,7 @@ header
     flex-direction: column
     align-items: flex-start
     gap: 20px
+    overflow-y: auto
 
     @media (max-width: screen.$breakpoint-medium)
       flex-direction: row
