--- a/portfolio/static/portfolio/css/main-light.css
+++ b/portfolio/static/portfolio/css/main-light.css
@@ -309,6 +309,7 @@ header nav {
   flex-direction: column;
   align-items: flex-start;
   gap: 20px;
+  overflow-y: auto;
 }
 @media (max-width: 1100px) {
   header nav {
